[project]
name = "naver-land-mcp"
version = "0.1.0"
description = "MCP server for searching Korean apartment listings, market prices, and recent transactions via Naver Real Estate"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "fastmcp>=0.4",
    "requests>=2.31",
]

[tool.uv]
package = false
